--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,9 @@
 /* Main navbar */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background: #FC4442;
   transition: all 0.3s ease;
-  height: 70px;
+  height: 80px;
   padding: 0px 30px;
   display: flex;
   align-items: center;
@@ -11,15 +11,18 @@
 }
 
 /* Logo */
-.navbar-wagon-brand img {
-  height: 50px;
-}
-
-/* User Avatar */
-.navbar-wagon .avatar {
-  height: 35px;
-  width: 35px;
-  border-radius: 50%;
+.navbar-brand h2 {
+  color: white;
+  font-size: 24px;
+  margin: 0px;
+  font-weight: bolder;
+  letter-spacing: -0.05em;
+  a {
+    color: white;
+    a:hover {
+      text-decoration: none !important;
+    }
+  }
 }
 
 /* Right section */
@@ -27,22 +30,17 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  a {
+    color: white;
+    font-size: 18px;
+    font-weight: bolder;
+  }
 }
 
 /* Basic navbar item */
 .navbar-wagon-item {
   cursor: pointer;
   padding: 0 20px;
-}
-
-/* Navbar link */
-.navbar-wagon-link {
-  color: #616668;
-  font-size: 14px;
-}
-.navbar-wagon-link:hover {
-  color: #da552f;
-  text-decoration: none;
 }
 
 /* Dropdown menu */
