--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -5,6 +5,7 @@
   <p>
   <%= dose.description %>
   <%= dose.ingredient.name %>
-  </p>
+  <%= link_to "Delete an ingredient", dose_path(dose), method: :delete %>
   <% end %>
+  </p>
 </div>
