--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,3 +1,15 @@
 .big-banner{
-
+  height: calc(90vh - 80px);
+  color: $light-gray;
+  text-align: center;
+  background-size: cover !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  h1 {
+    font-size: 60px;
+  }
+  p {
+    font-size: 30px
+  }
 }
