--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,16 +1,53 @@
-.card {
-  height: 250px;
-  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
-  background-color: white;
+.card-narrow {
+  height: 350px;
+  text-shadow: 0 1px 1px rgba(0,0,0,0.2);
+  background-color: $red;
   background-position: center;
-  color: white;
   position: relative;
+  margin-bottom: 30px;
+  border-radius: 3px;
+  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+}
+.card-wide {
+  height: 300px;
+  text-shadow: 0 1px 1px rgba(0,0,0,0.2);
+  background-color: $light-gray;
+  background-position: center;
+  position: relative;
+  padding: 20px 10px;
+  margin-bottom: 30px;
+  border-radius: 3px;
+  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+}
+.card-image {
+  height: 300px;
+  background-size: cover !important;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px 3px 0px 0px;
+  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
 }
 .card-description {
   position: absolute;
   bottom: 10px;
   left: 10px;
+  h2 {
+    margin: 0px;
+    a {
+      color: $light-gray;
+      font-size: 24px;
+    }
+  }
 }
-.card-description h2 {
-  font-size: 24px;
+.card-description-right {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  h2 {
+    margin: 0px;
+    a {
+      color: $red;
+      font-size: 24px;
+    }
+  }
 }
