--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,10 +1,24 @@
-<div class="container">
-  <div class="big-banner"></div>
-  <div class="card">
-  <p><% @cocktails.each do |cocktail| %>
-      <%= link_to cocktail.name, cocktail_path(cocktail) %>
-    <% end %>
-  </p>
-  <%= link_to "Create a new cocktail", new_cocktail_path %>
+
+<div class="big-banner" style="background-image: linear-gradient(-180deg, rgba(62,51,63,0.4) 0%, rgba(62,51,63,1.0) 99%), url(<%= image_path 'negroni-cover.jpg' %>);">
+  <div class="banner-content">
+    <h1>Negroni, Negroni, Negroni</h1>
+    <p><span id="banner-typed-text"></span></p>
+  </div>
+</div>
+<div class="blue-wrapper">
+  <div class="container">
+    <div class="row">
+      <% @cocktails.each do |cocktail| %>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="card-narrow">
+            <div class="card-image" style="background-image: linear-gradient(-240deg, rgba(62,51,63,0.2) 0%, rgba(62,51,63,0.4) 20%), url(<%= image_path 'negroni-cover.jpg' %>);">
+              <div class="card-description">
+                <h2><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
