--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,18 @@
-<h1>Create a new cocktail</h1>
-<%= simple_form_for(@cocktail) do |f| %>
-  <%= f.input :name %>
-  <%= f.button :submit %>
-<% end %>
+<div class="big-banner" style="background-image: linear-gradient(-180deg, rgba(62,51,63,0.1) 0%, rgba(62,51,63,1.0) 99%), url(<%= image_path 'bar-image.jpg' %>);">
+  <div class="banner-content">
+    <h1>Create a new cocktail</h1>
+  </div>
+</div>
+  <div class="blue-wrapper">
+    <div class="container">
+      <div class="card-wide">
+        <%= simple_form_for(@cocktail) do |f| %>
+          <%= f.input :name %>
+          <%= f.input :photo %>
+          <%= f.input :photo_cache, as: :hidden %>
+          <%= f.button :submit %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
