--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,11 +1,21 @@
-<div class="container">
-  <h1><%= @cocktail.name %></h1>
-  <%= link_to "Add ingredients to this cocktail", new_cocktail_dose_path(@cocktail) %>
-  <% @cocktail.doses&.each do |dose| %>
-  <p>
-  <%= dose.description %>
-  <%= dose.ingredient.name %>
-  <%= link_to "Delete an ingredient", dose_path(dose), method: :delete %>
-  <% end %>
-  </p>
+<div class="big-banner" style="background-image: linear-gradient(-180deg, rgba(62,51,63,0.4) 0%, rgba(62,51,63,1.0) 99%), url(<%= image_path 'negroni-cover.jpg' %>);">
+  <div class="banner-content">
+    <h1><%= @cocktail.name %></h1>
+  </div>
+</div>
+<div class="blue-wrapper">
+  <div class="container">
+    <div class="card-wide">
+      <% @cocktail.doses&.each do |dose| %>
+      <p>
+      <%= dose.description %> of
+      <%= dose.ingredient.name.capitalize %> |
+      <%= link_to "Delete this ingredient", dose_path(dose), method: :delete %> |
+      </p>
+      <% end %>
+      <div class="card-description-right">
+        <h2><%= link_to "Add ingredients to this cocktail", new_cocktail_dose_path(@cocktail) %></h2>
+      </div>
+    </div>
+  </div>
 </div>
