--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,8 +1,16 @@
-<h1>Add a new ingredient</h1>
-<div class="container">
-  <%= simple_form_for [@cocktail, @dose] do |f| %>
-    <%= f.input :description %>
-    <%= f.association :ingredient %>
-    <%= f.button :submit %>
-  <% end %>
+<div class="big-banner" style="background-image: linear-gradient(-180deg, rgba(62,51,63,0.1) 0%, rgba(62,51,63,1.0) 99%), url(<%= image_path 'bar-image.jpg' %>);">
+  <div class="banner-content">
+    <h1>Add a new ingredient</h1>
+  </div>
+</div>
+<div class="blue-wrapper">
+  <div class="card-wide">
+    <div class="container">
+      <%= simple_form_for [@cocktail, @dose] do |f| %>
+        <%= f.input :description %>
+        <%= f.association :ingredient %>
+        <%= f.button :submit %>
+      <% end %>
+    </div>
+  </div>
 </div>
