--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,4 +1,4 @@
-<div class="big-banner" style="background-image: linear-gradient(-180deg, rgba(62,51,63,0.1) 0%, rgba(62,51,63,1.0) 99%), url(<%= image_path 'bar-image.jpg' %>);">
+<div class="big-banner" style="background-image: linear-gradient(-180deg, rgba(62,51,63,0.1) 0%, rgba(62,51,63,1.0) 99%), url(<%= cl_image_path @cocktail.photo %>);">
   <div class="banner-content">
     <h1>Add a new ingredient</h1>
   </div>
