--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,4 @@
-<div class="big-banner" style="background-image: linear-gradient(-180deg, rgba(62,51,63,0.4) 0%, rgba(62,51,63,1.0) 99%), url(<%= image_path 'negroni-cover.jpg' %>);">
+<div class="big-banner" style="background-image: linear-gradient(-180deg, rgba(62,51,63,0.4) 0%, rgba(62,51,63,1.0) 99%), url(<%= cl_image_path @cocktail.photo %>);">
   <div class="banner-content">
     <h1><%= @cocktail.name %></h1>
   </div>
